# rag-evaluator

./: README.md  evaluator.py  pyproject.toml
implementation/: answer.py
