[project]
name = "rag-evaluator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "gradio>=5.47.2,<6.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-huggingface>=1.0.0",
    "litellm>=1.77.5",
    "pandas>=2.3.3",
    "pydantic>=2.0",
    "python-dotenv>=1.1.1",
]
